# Open_MP

./: CMakeLists.txt  inflection_map.cpp  inflection_map.hpp  main  main.cpp  sequence.cpp  sequence.hpp  sequence_vector.cpp  sequence_vector.hpp  util.hpp
